--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <p>Hello World</p>
+    <img src="./assets/CheckCircle.png" alt="" />
+    <img src="./assets/hero-bg.png" alt="" />
+    <img src="./assets/Brain.png" alt="">
   </body>
 </html>
