--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Hello World</p>
-    <img src="./assets/CheckCircle.png" alt="" />
-    <img src="./assets/hero-bg.png" alt="" />
-    <img src="./assets/Brain.png" alt="">
+        <header class="site-header">
+            <div class="nav-container">
+                <!-- logo -->
+                 <div class="logo">
+                    <img src="./assets/logo-navbar.png" alt="">
+                 </div>
+
+                 <!-- navvbar -->
+                 <nav class="navbar font-inter">
+                    <ul>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">How it Works</a></li>
+                    <li><a href="">Why It'S Different</a></li>
+                  </ul>
+                 </nav>
+
+                 <!-- button1 -->
+                  <div class="header-button">
+                    <button class="btn" type="button">Get Early Access</button>
+                  </div>
+            </div>
+        </header>
   </body>
 </html>
