Added Hero Section with changes

--- a/index.html
+++ b/index.html
@@ -76,12 +76,30 @@
         <div class="hero-buttons font-inter">
           <button class="buttonhero1 btn">
             Start Building Your Vault
-            <img src="./assets/ArrowRight.png" alt="" />
+             <span class="arrow"><img src="./assets/ArrowRight.png" alt="" /></span>
           </button>
           <button class="buttonhero2">
-            <i class="fa-solid fa-play"></i>
-            See How It Works
+            <p><i class="fa-solid fa-play"></i></p> See How It Works
           </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- POINTS SECTION -->
+    <section id="points">
+      <div class="points-container">
+        <div class="points-hearder .font-inter">
+          <h2>Notes Don't Fail,Strusture Does.</h2>
+          <p>
+            You're not bad at learning. Your tools just weren't built for how
+            knowledge actually works.
+          </p>
+        </div>
+        <div class="points-cards">
+          <h3><a href=""></a></h3>
+          <h3><a href=""></a></h3>
+          <h3><a href=""></a></h3>
+          <h3><a href=""></a></h3>
         </div>
       </div>
     </section>
